// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input should support maxLength 1`] = `
<Input
  disabled={false}
  maxLength="3"
  prefixCls="ant-input"
  type="text"
>
  <input
    className="ant-input"
    disabled={false}
    maxLength="3"
    onKeyDown={[Function]}
    type="text"
  />
</Input>
`;

exports[`TextArea should support disabled 1`] = `
<TextArea
  disabled={true}
  prefixCls="ant-input"
>
  <textarea
    className="ant-input ant-input-disabled"
    disabled={true}
    onChange={[Function]}
    onKeyDown={[Function]}
    style={Object {}}
  />
</TextArea>
`;

exports[`TextArea should support maxLength 1`] = `
<TextArea
  maxLength="10"
  prefixCls="ant-input"
>
  <textarea
    className="ant-input"
    maxLength="10"
    onChange={[Function]}
    onKeyDown={[Function]}
    style={Object {}}
  />
</TextArea>
`;
